# tripleo-upgrade

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  .yamllint  .zuul.yaml  README.md  README.rst  ansible-requirements.txt  ansible.cfg  plugin.spec  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ci-scripts/: ansible-lint.sh  releasenotes_tox.sh
defaults/: main.yml
files/: rename-nics.yaml
filter_plugins/: tripleo_upgrade.py
handlers/: main.yml
infrared_plugin/: main.yml  plugin.spec
meta/: main.yml
molecule/: ansible-role-requirements.yml  ansible-test-env.rc  molecule-requirements.txt
molecule/default/: molecule.yml  playbook.yml  prepare.yml
molecule/scripts/: run-local-test
molecule/tests/: test_molecule.py
releasenotes/notes/: releasenotes-56f6c4138b4e8d1d.yaml
releasenotes/source/: conf.py  index.rst
tasks/: container_images.yaml  container_images_rhel.yaml  create-scripts.yaml  docker_composable_upgrade.yml  local_docker_registry_env.yaml  main.yml  node_upgrade.yml  node_upgrade_script.yml  step_upgrade.yml  undercloud_validate_upgrade.yaml
tasks/common/: adjust-network-environment.yaml  adjust-roles-data.yaml  auxilary-facts.yaml  build_extra_template.yaml  configure_uc_containers.yml  control_plane_test_start.yaml  control_plane_test_stop.yaml  controller_post_script.yml  controller_post_scripts.yml  (+31 more)
templates/: ceph-update-run.sh.j2  ceph-upgrade-run.sh.j2  ceph_host_limit.txt.j2  cephosd.yaml.j2  check_service_galera.sh.j2  check_service_haproxy.sh.j2  check_service_haproxy_backend.sh.j2  check_service_rabbitmq.sh.j2  check_service_reboot.sh.j2  check_service_redis.sh.j2  collect_logs.sh.j2  collect_logs.yaml.j2  containers-default-parameters.yaml.j2  control_plane_test_start.sh.j2  control_plane_test_stop.sh.j2  create_registry_env.sh.j2  disable-leapp.yaml.j2  download_images.sh.j2  dpdk-upgrade-env.yaml.j2  extraconfig_override.yaml.j2  fip_http_check_start.sh.j2  fip_http_check_stop.sh.j2  ha-image-update-external-update.sh.j2  ipa-permission.sh.j2  l3_agent_failover_post.sh.j2  l3_agent_failover_pre.sh.j2  l3_agent_start_ping.sh.j2  l3_agent_stop_ping.sh.j2  l3_agent_wait_ping.sh.j2  node_upgrade.sh.j2  node_upgrade_post.sh.j2  node_upgrade_pre.sh.j2  nova_actions_check.sh.j2  oooq_deploy_transformation.sh.j2  overcloud_online_data_migration.sh.j2  overcloud_prepare_containers.sh.j2  overcloud_system_upgrade.sh.j2  overcloud_update.sh.j2  overcloud_update_converge.sh.j2  overcloud_update_prepare.sh.j2  (+18 more)
tests/: oooq-test.yaml  test.yml  workarounds-update  workarounds-upgrade
vars/: main.yml
zuul.d/: layout.yaml
(+89 files in other folders)
