[metadata]
name = tripleo-upgrade
summary = tripleo-upgrade - An ansible role for upgrade and update a TripleO deployment
description-file =
    README.rst
author = TripleO Team
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/tripleo-upgrade
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-upgrade/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-upgrade/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-upgrade/meta = meta/*
    usr/local/share/ansible/roles/tripleo-upgrade/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-upgrade/templates = templates/*
    usr/local/share/ansible/roles/tripleo-upgrade/tests = tests/*
    usr/local/share/ansible/roles/tripleo-upgrade/vars = vars/*
    usr/local/share/ansible/roles/tripleo-upgrade/files = files/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

